force-app/main/default/objects/Zip_Code__c.object
<CustomObject>
    <description>ADO# 390171
Used to assign the proper School ID when a lead is created.</description>
    <fields>
        <fullName>Grade_Offered__c</fullName>
        <description>ADO# 390171</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Grade Offered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Acronym__c</fullName>
        <description>ADO#390171</description>
        <encryptionScheme>None</encryptionScheme>
        <label>School Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_ID_Location__c</fullName>
        <description>ADO# 390171</description>
        <encryptionScheme>None</encryptionScheme>
        <label>School ID Location</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>ADO# 390171</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>School_Acronym__c</columns>
        <columns>School_ID_Location__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>